# oncrix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/bootloader/: Cargo.toml
crates/bootloader/src/: boot_info.rs  lib.rs  memory_map.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: ac97_audio.rs  ac97_codec.rs  acpi_battery.rs  acpi_button.rs  afs_fscache.rs  ahci.rs  ahci_atapi.rs  ahci_em.rs  ahci_fis.rs  ahci_pm.rs  ahci_port.rs  alsa_pcm.rs  amdgpu_core.rs  ata.rs  ata_ahci.rs  ata_piix.rs  bio.rs  block_loop.rs  block_partition.rs  block_request.rs  bluetooth.rs  bochs_vbe.rs  btusb.rs  can_bus.rs  can_socket.rs  cdrom_sr.rs  cgroup_attach.rs  cpu_freq.rs  cpuidle_core.rs  dax_driver.rs  device.rs  dm_crypt.rs  dm_linear.rs  dma_engine.rs  drm.rs  drm_atomic.rs  drm_connector.rs  drm_crtc.rs  drm_dp.rs  drm_fb_helper.rs  (+178 more)
crates/ipc/: Cargo.toml
crates/ipc/src/: async_ipc.rs  binder_ipc.rs  channel.rs  dbus_bus.rs  endpoint.rs  eventfd.rs  ipc_audit.rs  ipc_compat.rs  ipc_mq_notify.rs  ipc_msg.rs  ipc_namespace.rs  ipc_sem.rs  ipc_shm_ext.rs  ipc_socket_pair.rs  kcm.rs  lib.rs  message.rs  mqueue.rs  netlink_ipc.rs  pipe_buf.rs  posix_sem.rs  rpmsg.rs  shm_ipc.rs  tipc.rs  unix_socket.rs  vsock.rs
crates/kernel/: Cargo.toml  linker.ld
crates/kernel/src/: affinity_mask.rs  aio.rs  alarmtimer.rs  apparmor.rs  audit.rs  audit_core.rs  audit_rules.rs  audit_watch.rs  bitfield.rs  bitmap_ops.rs  bpf.rs  bpf_btf.rs  bpf_cgroup.rs  bpf_core.rs  bpf_helpers.rs  bpf_jit.rs  bpf_lsm.rs  bpf_map.rs  bpf_map_array.rs  bpf_map_types.rs  bpf_maps.rs  bpf_prog.rs  bpf_prog_attach.rs  bpf_ringbuf.rs  bpf_sockops.rs  bpf_struct_ops.rs  bpf_trampoline.rs  bpf_verifier.rs  bpf_verifier_log.rs  bridge.rs  bus_type.rs  cap.rs  capability.rs  cgroup.rs  cgroup_blkio.rs  cgroup_core.rs  cgroup_cpu.rs  cgroup_cpuset.rs  cgroup_cpuset_v2.rs  cgroup_device.rs  (+418 more)
crates/mm/: Cargo.toml
crates/mm/src/: addr.rs  address_space.rs  anon_vma.rs  anon_vma_chain.rs  balloon.rs  balloon_compaction.rs  balloon_driver.rs  balloon_inflate.rs  bitmap.rs  bootmem.rs  buddy_alloc_core.rs  cleancache.rs  cleancache_ops.rs  cma.rs  cma_alloc.rs  cma_bitmap.rs  cma_reserve.rs  compaction.rs  compaction_defer.rs  compaction_scan.rs  compaction_zone.rs  copy_page.rs  cow.rs  damon.rs  damon_core.rs  damon_lru_sort.rs  damon_ops.rs  damon_reclaim.rs  damon_region.rs  dax.rs  dma.rs  dma_coherent.rs  dma_fence.rs  dma_mapping.rs  dma_pool.rs  dma_remap.rs  dma_sg.rs  dmapool.rs  early_alloc.rs  early_ioremap.rs  (+320 more)
crates/process/: Cargo.toml
crates/process/src/: affinity.rs  clone.rs  coredump.rs  cred.rs  fork.rs  group.rs  lib.rs  namespace.rs  pid.rs  process.rs  ptrace.rs  rusage.rs  scheduler.rs  signal.rs  table.rs  thread.rs
crates/syscall/: Cargo.toml
crates/syscall/src/: accept4_call.rs  accept_call.rs  accept_ext_call.rs  access_call.rs  acct_call.rs  add_key_call.rs  adjtimex_call.rs  alarm_call.rs  arch_prctl_call.rs  bind_call.rs  bpf_call.rs  bpf_calls.rs  brk_call.rs  cachestat.rs  capget_call.rs  capget_ext_call.rs  capset_call.rs  chdir_call.rs  chmod_call.rs  chown_call.rs  chroot_call.rs  clock.rs  clock_getres_call.rs  clock_gettime_call.rs  clock_nanosleep_call.rs  clock_settime_call.rs  clone3.rs  clone3_call.rs  clone_call.rs  close_call.rs  close_range.rs  close_range_call.rs  close_range_ext_call.rs  connect_call.rs  connect_ext_call.rs  copy_file_range_call.rs  copy_file_range_ext_call.rs  copy_range.rs  cred_calls.rs  delete_module_call.rs  (+410 more)
crates/vfs/: Cargo.toml
crates/vfs/src/: acl.rs  adfs_fs.rs  affs.rs  afs_callback.rs  afs_inode.rs  aio.rs  aio_ctx.rs  aio_ring.rs  anon_inode.rs  atime_update.rs  autofs.rs  bcachefs_btree.rs  bcachefs_inode.rs  bdev_cache.rs  binderfs.rs  binfmt_elf.rs  binfmt_script.rs  bio_layer.rs  blk_mq.rs  block_cache.rs  block_dev.rs  bpf_fs.rs  btrfs.rs  btrfs_balance.rs  (+399 more)
(+292 files in other folders)
