[package]
name = "oncrix-ipc"
description = "ONCRIX - Inter-Process Communication primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oncrix-lib.workspace = true
oncrix-mm.workspace = true
