[package]
name = "oncrix-mm"
description = "ONCRIX - Memory management (virtual memory, page allocator)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oncrix-lib.workspace = true
oncrix-hal.workspace = true
