[package]
name = "oncrix-process"
description = "ONCRIX - Process and thread management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oncrix-lib.workspace = true
oncrix-mm.workspace = true
oncrix-ipc.workspace = true
