[package]
name = "oncrix-syscall"
description = "ONCRIX - POSIX-compatible system call interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oncrix-lib.workspace = true
oncrix-process.workspace = true
oncrix-mm.workspace = true
oncrix-ipc.workspace = true
oncrix-vfs.workspace = true
